Fix modal/side-nav overlap. Stop masonry refresh and hiding of layout icons on modal open

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -584,6 +584,7 @@ header, main, footer {
 }
 
 #post-modal {
+  z-index: 1001 !important;
   .cat-name, .tag-name {
     color: $fus-yellow;
     &:hover {
